# milkv-PaddleOCR-ncnn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: config.json
lib/cmake/ncnn/: ncnnConfig.cmake
lib/ncnn/include/ncnn/: platform.h
lib/ncnn/lib/cmake/ncnn/: ncnn.cmake  ncnnConfigVersion.cmake
lib/ncnn/lib/pkgconfig/: ncnn.pc
models/: PP-OCRv5_mobile_rec.param  PP-OCRv5_server_det.param  cls.param  det.param  keys.txt  rec.param
opencv4/include/opencv4/opencv2/: cvconfig.h
opencv4/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules.cmake
src/: angle_net.h  crnn_net.cpp  crnn_net.h  db_net.cpp  db_net.h  logging.h  main.cpp  ocr_engine.cpp  utils.cpp
tools/: build.sh  build_ncnn_risc.sh  build_opencv.sh  build_opencv_risc.sh
